--- a/apps/projman/templates/addcategory.html
+++ b/apps/projman/templates/addcategory.html
@@ -1,10 +1,6 @@
 <form autocomplete="off">
 	<input type="hidden" name="priority" value=""/>
-	<label for="category">Category:</label> <select name="{{ category_form.project.name }}" style="width: 211px;">
-	{% for choice_val, choice_label in category_form.project.field.choices %}
-		<option value="{{ choice_val }}">{{ choice_label }}</option>
-	{% endfor %}
-	</select><br/>
+	<input type="hidden" name="{{ category_form.project.name }}" value="{{ project.id }}"/>
 	<label for="name">Name:</label> <input type="text" name="{{ category_form.name.name }}" style="width: 221px;"/><br/>
 	<label for="description">Description:</label> <input type="text" name="{{ category_form.description.name }}" style="width: 140px;"/><button type="button" class="button">Add</button>
 </form>
