--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -25,6 +25,10 @@
 					<div class="addHeader">Add Project</div>
 					{% include "addproject.html" %}
 				</div>
+				<div class="loadContainer">
+					<div class="addHeader">Load From XML</div>
+					{% include "load.html" %}
+				</div>
 			</div>
 		</td>
 	</tr>
