--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -68,7 +68,7 @@ a:hover {
 	margin: 10px auto;
 	padding: 0px;
 	background: #fff;
-	border: 1px solid #666;
+	border: 1px solid #ddd;
 }
 
 #banner {
