--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="header">
 		<div id="left">
-			{% if request.account.name %}<strong>{{ request.account.name }}</strong>: {% endif %}<a href="/">Home</a> | <a href="http://blog.perplexedlabs.com/">Blog</a> | {% if request.user.is_authenticated %}<a href="/logout">Logout</a> | <a href="/pm/overview">Overview</a>{% else %}<a href="/login">Login</a> | <a href="/pm/create">Register</a>{% endif %}
+			{% if request.account.name %}<strong>{{ request.account.name }}</strong>: {% endif %}{% if request.user.is_authenticated %}<a href="{% url pm_home %}">Home</a> | <a href="/logout">Logout</a>{% else %}<a href="/">Home</a> | <a href="http://blog.perplexedlabs.com/">Blog</a> - <a href="/pm/create">Register</a> | <a href="/login">Login</a>{% endif %}
 		</div>
 		<div id="right">
 			<img src="/site_media/images/plabs_logo.gif" alt="Perplexed Labs, Inc."/>
