switched to using generic relation for thread
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3409 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/tasks.html
+++ b/apps/projman/templates/tasks.html
@@ -4,9 +4,9 @@
 
 {% block navMenu %}
 <ul id="navMenuList">
-	<li><a href="{% url pm_view category_id=category.id %}">Overview</a></li>
-	<li><a href="{% url pm_tasks category_id=category.id %}" class="current">Tasks</a></li>
-	<li><a href="{% url pm_thread "c",category.id %}">Messages</a></li>
+	<li><a href="{% url pm_view category.id %}">Overview</a></li>
+	<li><a href="{% url pm_tasks category.id %}" class="current">Tasks</a></li>
+	<li><a href="{% url pm_thread category.id %}">Messages</a></li>
 	<li><a href="">Milestones</a></li>
 </ul>
 {% endblock %}
