--- a/apps/projman/templates/view.html
+++ b/apps/projman/templates/view.html
@@ -7,7 +7,7 @@
 <ul id="navMenuList">
 	<li><a href="{% url pm_view category.id %}" class="current">Overview</a></li>
 	<li><a href="{% url pm_tasks category.id %}">Tasks</a></li>
-	<li><a href="{% url pm_thread "c",category.id %}">Messages</a></li>
+	<li><a href="{% url pm_thread category.id %}">Messages</a></li>
 	<li><a href="">Milestones</a></li>
 </ul>
 {% endblock %}
