--- a/templates/content.html
+++ b/templates/content.html
@@ -7,6 +7,9 @@
 	}
 </style>
 <div id="contentContainer">
+	<div id="headline">
+		{% block header %}{% endblock %}
+	</div>
 	<div id="navMenu" class="floatContainer">
 		{% block navMenu %}{% endblock %}
 	</div>
