--- a/apps/projman/templates/thread_view.html
+++ b/apps/projman/templates/thread_view.html
@@ -6,8 +6,8 @@
 <ul id="navMenuList">
 	<li><a href="{% url pm_overview category.id %}">Overview</a></li>
 	<li><a href="{% url pm_tasks category.id %}">Tasks</a></li>
-	<li><a href="{% url pm_thread category.id %}" class="current"">Messages</a></li>
-	<li><a href="">Milestones</a></li>
+	<li><a href="{% url pm_thread category.id %}" class="current">Messages</a></li>
+	<li><a href="{% url pm_milestones category.id %}">Milestones</a></li>
 </ul>
 {% endblock %}
 
