--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -1,6 +1,6 @@
 {% extends "content.html" %}
 
-{% block title %}Milestones - {{ block.super }}{% endblock %}
+{% block title %}Category Milestones - {{ block.super }}{% endblock %}
 
 {% block navMenu %}
 <ul id="navMenuList">
