--- a/apps/projman/templates/thread_view.html
+++ b/apps/projman/templates/thread_view.html
@@ -1,6 +1,6 @@
 {% extends "content.html" %}
 
-{% block title %}View Thread - {{ block.super }}{% endblock %}
+{% block title %}Category Messages - {{ block.super }}{% endblock %}
 
 {% block navMenu %}
 <ul id="navMenuList">
