--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -35,7 +35,7 @@
 	}
 	
 	.item .itemType {
-		background: #400080;
+		background: #76c;
 		font-weight: bold;
 		color: #fff;
 		float: left;
@@ -63,7 +63,7 @@
 	}
 	
 	.itemType.completed {
-		background: #080;
+		background: #696;
 	}
 	
 	.itemText.completed {
