--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -45,7 +45,7 @@
 				{% for milestone in category.milestone_set.all %}
 					<div id="milestone{{ milestone.id }}" class="milestone">
 						<div class="msName">{{ milestone.name }}</div>
-						<div class="msDeadline">{{ milestone.deadline|date:"Y-m-d" }}</div>
+						<div class="msDeadline">{{ milestone.days_remaining.days }} day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining ({{ milestone.deadline|date:"Y-m-d" }})</div>
 						<div class="msDescription">{{ milestone.description }}</div>
 					</div>
 				{% endfor %}
