made category template, made changes, moved category title to headline
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3417 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -1,16 +1,6 @@
-{% extends "content.html" %}
-{% load custom_tags %}
+{% extends "category.html" %}
 
-{% block title %}Category Overview - {{ block.super }}{% endblock %}
-
-{% block navMenu %}
-<ul id="navMenuList">
-	<li><a href="{% url pm_overview category.id %}" class="current">Overview</a></li>
-	<li><a href="{% url pm_tasks category.id %}">Tasks</a></li>
-	<li><a href="{% url pm_thread category.id %}">Messages</a></li>
-	<li><a href="{% url pm_milestones category.id %}">Milestones</a></li>
-</ul>
-{% endblock %}
+{% block title %}Overview - {{ block.super }}{% endblock %}
 
 {% block content %}
 <style type="text/css">
