--- a/templates/content.html
+++ b/templates/content.html
@@ -8,7 +8,7 @@
 </style>
 <div id="contentContainer">
 	<div id="headline">
-		{% block header %}{% endblock %}
+		{% block headline %}{% endblock %}
 	</div>
 	<div id="navMenu" class="floatContainer">
 		{% block navMenu %}{% endblock %}
