--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -1,15 +1,6 @@
-{% extends "content.html" %}
+{% extends "category.html" %}
 
-{% block title %}Category Milestones - {{ block.super }}{% endblock %}
-
-{% block navMenu %}
-<ul id="navMenuList">
-	<li><a href="{% url pm_overview category.id %}">Overview</a></li>
-	<li><a href="{% url pm_tasks category.id %}">Tasks</a></li>
-	<li><a href="{% url pm_thread category.id %}">Messages</a></li>
-	<li><a href="{% url pm_milestones category.id %}" class="current">Milestones</a></li>
-</ul>
-{% endblock %}
+{% block title %}Milestones - {{ block.super }}{% endblock %}
 
 {% block content %}
 <style type="text/css">
